abstract class Dependency {
  Type get entry;
}
