import 'package:optional/optional.dart';

abstract class Producible {
  Optional<Object> make();
}
