abstract class Registrable {
  Registrable bind<R>();
}
